# agentic-rag-demo

./: .env.example  .gitignore  README.md  codex.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  agent_service.py  constants.py  graph.py
app/agent/demo/: README.md  __init__.py  agentic_rag_graph.py  demo_runner.py
app/api/: agent_api.py  chat_api.py  dependencies.py  document_api.py
app/core/: config.py  exceptions.py  logging_config.py
app/core/memory/: __init__.py  classifier.py  conversation_memory.py  crypto.py  entry_models.py  gatekeeper.py  models.py  session_store.py
app/llm/: __init__.py  chat_model.py  embedding_model.py
app/rag/: bm25_retriever.py  document_loader.py  hybrid_retriever.py  prompt_builder.py  query_rewriter.py  rag_chain.py  reranker.py  retriever.py  text_splitter.py  vector_store.py
app/schemas/: agent_schema.py  chat_schema.py  document_schema.py
app/services/: chat_service.py  document_service.py
demo/: README.md  __init__.py  simple_agent.py
docs/: example.md  mq.md  突击检查.md
plan/: 2026-06-25-basic-agent-design.md  2026-06-26-langgraph-agent-v2-implementation-plan.md
scripts/: ask.py  index_docs.py
tests/: test_agent_api.py  test_agent_graph.py  test_agent_service.py  test_document_service.py  test_hybrid_retriever.py  test_logging_config.py  test_memory.py  test_query_rewriter.py  test_reranker.py  test_text_splitter.py  test_vector_store.py
